--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
     <meta
       property="og:image"
-      content="https://ia.media-imdb.com/images/rock.jpg"
+      content="/public/img/card-saniel.png"
     />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
