Adicionando configurações no open graph

--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
-    <title>Sunny Templates</title>
-    <meta property="og:title" content="Sunny Templates" />
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta
-      property="og:image"
-      content="/public/img/card-saniel.png"
-    />
     <meta charset="UTF-8" />
+    <title>Saniel Templates</title>
+    <meta property="og:title" content="Sunny Templates" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="saniel-templates.vercel.app" />
+    <meta property="og:determiner" content="the" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:locale:alternate -" content="en_US" />
+    <meta property="og:locale:alternate -" content="es_ES" />
+    <meta property="og:site_name" content="Saniel Templates" />
+    <meta
+      property="og:description"
+      content="Site específico para meus templates e códigos com funcionalidades e efeitos que aprendo durante minha imersão no desenvolvimento full stack."
+    />
+    <meta
+      property="og:description"
+      content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
+    Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."
+    />
+    <meta property="og:image" content="/public/img/card-saniel.png" />
+    <meta
+      property="og:image:secure_url"
+      content="blob:https://vercel.com/a8e4b6c0-d907-403d-8d57-78177caa332f"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:type" content="image/svg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="640" />
+    <meta property="og:image:height" content="360" />
+    <meta
+      property="og:image:alt"
+      content="Cartão de visita!"
+    />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
