alterando a imagem do open graph

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
       content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
     Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."
     />
-    <meta property="og:image" content="/public/img/card-saniel.png" />
-    <meta
-      property="og:image:secure_url"
-      content="blob:https://vercel.com/a8e4b6c0-d907-403d-8d57-78177caa332f"
-    />
+    <meta property="og:image" content="https://media.istockphoto.com/id/1203763961/pt/foto/stacked-credit-cards.jpg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:type" content="image/svg" />
     <meta property="og:image:type" content="image/jpeg" />
