comentando o open graph

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Saniel Templates</title>
-    <meta property="og:title" content="Sunny Templates" />
+    <!-- <meta property="og:title" content="Sunny Templates" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="saniel-templates.vercel.app" />
     <meta property="og:determiner" content="the" />
@@ -30,6 +30,17 @@
       property="og:image:alt"
       content="Cartão de visita!"
     />
+
+    <meta property="twitter:image" content="blob:https://vercel.com/a137fae0-668e-47ab-a55c-e105ed7281a0">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Twitter link preview title">
+    <meta property="twitter:description" content="Twitter link preview description">
+    <meta property="twitter:description" content="Twitter link preview description">
+    <meta property="description" content="Search engine description" />
+    <meta property="og:description" content="Link preview description" /> -->
+    <meta name="description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
+    Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.
+    "/>
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
