--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Saniel Templates</title>
-    <!-- <meta property="og:title" content="Sunny Templates" />
+    <meta property="og:title" content="Sunny Templates" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="saniel-templates.vercel.app" />
     <meta property="og:determiner" content="the" />
@@ -20,7 +20,7 @@
       content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
     Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."
     />
-    <meta property="og:image" content="https://media.istockphoto.com/id/1203763961/pt/foto/stacked-credit-cards.jpg" />
+    <meta property="og:image" content="https://assets.vercel.com/image/upload/front/vercel/twitter-card.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:type" content="image/svg" />
     <meta property="og:image:type" content="image/jpeg" />
@@ -31,19 +31,20 @@
       content="Cartão de visita!"
     />
 
-    <meta property="twitter:image" content="blob:https://vercel.com/a137fae0-668e-47ab-a55c-e105ed7281a0">
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Twitter link preview title">
-    <meta property="twitter:description" content="Twitter link preview description">
-    <meta property="twitter:description" content="Twitter link preview description">
-    <meta property="description" content="Search engine description" />
-    <meta property="og:description" content="Link preview description" /> -->
-    <meta name="description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
+    <meta property="twitter:image" content="https://assets.vercel.com/image/upload/front/vercel/twitter-card.png">
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="Saniel Templates Title by Twitter">
+    <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
+    <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
+    <meta property="description" content="Search engine description By Og" />
+    <meta property="og:description" content="https://sanielnascimento.com/" /> 
+    <meta name="description" content="Desciption usualy => Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
     Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.
     "/>
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
   </head>
   <body>
     <div id="root"></div>
