alterando imagem pra local no open graph

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       content="Cartão de visita!"
     />
 
-    <meta property="twitter:image" content="https://assets.vercel.com/image/upload/front/vercel/twitter-card.png">
+    <meta property="twitter:image" content="./public/img/card-saniel.png">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Saniel Templates Title by Twitter">
     <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
