alterando informações no open graph

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Saniel Templates</title>
-    <meta property="og:title" content="Sunny Templates" />
-    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Sunny Templates by Og" />
+    <meta property="og:type" content="WebSite" />
     <meta property="og:url" content="saniel-templates.vercel.app" />
     <meta property="og:determiner" content="the" />
     <meta property="og:locale" content="pt_BR" />
@@ -35,9 +35,8 @@
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Saniel Templates Title by Twitter">
     <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
-    <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
+    <meta property="twitter:description" content="2ª Saniel Templates description by Twitter">
     <meta property="description" content="Search engine description By Og" />
-    <meta property="og:description" content="https://sanielnascimento.com/" /> 
     <meta name="description" content="Desciption usualy => Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
     Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.
     "/>
