alterando fotos para links do google fotos no og open graph

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
     Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."
     />
-    <meta property="og:image" content="https://assets.vercel.com/image/upload/front/vercel/twitter-card.png" />
+    <meta property="og:image" content="https://photos.google.com/photo/AF1QipPv3ehKhoE_rPOR_KIDaqV8yfmdquvt1rKf6nfE" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:type" content="image/svg" />
     <meta property="og:image:type" content="image/jpeg" />
@@ -31,7 +31,7 @@
       content="Cartão de visita!"
     />
 
-    <meta property="twitter:image" content="https://scontent.fqbx1-1.fna.fbcdn.net/v/t39.30808-6/346620235_1296413381281347_4815409561435361059_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=9mn9J-MNrn4AX8uXHKw&_nc_ht=scontent.fqbx1-1.fna&oh=00_AfABzzcmRvrc3X4ceKKFzvL4en1OTjJIXj2M8H7X_UYDxg&oe=6477FF57">
+    <meta property="twitter:image" content="https://photos.google.com/photo/AF1QipPv3ehKhoE_rPOR_KIDaqV8yfmdquvt1rKf6nfE">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Saniel Templates Title by Twitter">
     <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
