alterando fotos para links do google fotos no og open graph

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite.
     Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."
     />
-    <meta property="og:image" content="https://photos.google.com/photo/AF1QipPv3ehKhoE_rPOR_KIDaqV8yfmdquvt1rKf6nfE" />
+    <meta property="og:image" content="https://lh3.googleusercontent.com/pw/AJFCJaUv86tWmPYrmGT3ll5l2XXlUSqFKXIJPAD8KxD9pDPWiNSKhTSSL-oZ5mFqgWbGipRKyBv52aMF0U-2cJCcF7II0mtv11obKgngtaHCV0ohm2KygyyvIIbqgO1IvznXC0KpKL_PFTU4tTjDw7_oDjeMxIgFDUy4hdViOFI4BPNu3jaFYMVsggYQl0JKPCb6LUPUx-kvmQ19wbV8VkUD0zQfHSis_d8QXEFFKKwsg7bkn0jUigEY_7QKgiGrspRH4pHKK0uxxXWnDgqehBGNWCN0q67ZpaBfxv7nFieP_tVURhr_0PcoYq8ppR5i0VwTTuUwrnftfWOIpSJtovwibLseJPOtktJx-lme0YXDV6LALVlK_58ffTYZ6l7cf9EyK1BWHA7soCJ0V-mLNVm5_fzGL2QcUkpuAaCQn94tXFoXQtRBKwdGXqHSi-SwNkZ7QsVo0oPmty1ylWvfdCdpISZwPn7LfewCITVli_FMF900UZ11c_4ROsz6RYspkFe-ZTSiWUIIJm1PeWScO0yZHXiXWA6-FckC2LT_lIxDxDufcJMzxHuxA9Nqqsf1ysjmk7ZAFdzYQ37TcER6tnCuXMS6jno_nBdyrHIUCHn05U-JgY01Im6bzjCa6-AJwrg_VTYCJnAbtSm7NUh55eTfEn2BJuEPn1vJ-EegMRY6q1oZZwh4aidpck5iBT6E_oKy_uXbKsUzlOkjWsC7pTzZY9Zs7mfwVTw7vvDCLdS2xIWKDENziDOJRoG7TCjWn4BxdfQcokJvhgCbmgrkOB9cthWtjg-kUWUrf-oPHeM4g9Qnr8_3OllNBKyuMZqQ1VNF1i4vPwji2iK-htpgvtBiM9GJErUr4oUVm_ZypxOd0P_QDpatxfGJxdZP0-IFEeVh7Zokd-GJt7fNvPNgXkWSdkbjMxWe3EcpTMnj_DigCO6X3c48bNw64lcaFVA=w1664-h892-s-no?authuser=0" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:type" content="image/svg" />
     <meta property="og:image:type" content="image/jpeg" />
@@ -31,7 +31,7 @@
       content="Cartão de visita!"
     />
 
-    <meta property="twitter:image" content="https://photos.google.com/photo/AF1QipPv3ehKhoE_rPOR_KIDaqV8yfmdquvt1rKf6nfE">
+    <meta property="twitter:image" content="https://lh3.googleusercontent.com/pw/AJFCJaUv86tWmPYrmGT3ll5l2XXlUSqFKXIJPAD8KxD9pDPWiNSKhTSSL-oZ5mFqgWbGipRKyBv52aMF0U-2cJCcF7II0mtv11obKgngtaHCV0ohm2KygyyvIIbqgO1IvznXC0KpKL_PFTU4tTjDw7_oDjeMxIgFDUy4hdViOFI4BPNu3jaFYMVsggYQl0JKPCb6LUPUx-kvmQ19wbV8VkUD0zQfHSis_d8QXEFFKKwsg7bkn0jUigEY_7QKgiGrspRH4pHKK0uxxXWnDgqehBGNWCN0q67ZpaBfxv7nFieP_tVURhr_0PcoYq8ppR5i0VwTTuUwrnftfWOIpSJtovwibLseJPOtktJx-lme0YXDV6LALVlK_58ffTYZ6l7cf9EyK1BWHA7soCJ0V-mLNVm5_fzGL2QcUkpuAaCQn94tXFoXQtRBKwdGXqHSi-SwNkZ7QsVo0oPmty1ylWvfdCdpISZwPn7LfewCITVli_FMF900UZ11c_4ROsz6RYspkFe-ZTSiWUIIJm1PeWScO0yZHXiXWA6-FckC2LT_lIxDxDufcJMzxHuxA9Nqqsf1ysjmk7ZAFdzYQ37TcER6tnCuXMS6jno_nBdyrHIUCHn05U-JgY01Im6bzjCa6-AJwrg_VTYCJnAbtSm7NUh55eTfEn2BJuEPn1vJ-EegMRY6q1oZZwh4aidpck5iBT6E_oKy_uXbKsUzlOkjWsC7pTzZY9Zs7mfwVTw7vvDCLdS2xIWKDENziDOJRoG7TCjWn4BxdfQcokJvhgCbmgrkOB9cthWtjg-kUWUrf-oPHeM4g9Qnr8_3OllNBKyuMZqQ1VNF1i4vPwji2iK-htpgvtBiM9GJErUr4oUVm_ZypxOd0P_QDpatxfGJxdZP0-IFEeVh7Zokd-GJt7fNvPNgXkWSdkbjMxWe3EcpTMnj_DigCO6X3c48bNw64lcaFVA=w1664-h892-s-no?authuser=0">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Saniel Templates Title by Twitter">
     <meta property="twitter:description" content="1ª Saniel Templates description by Twitter">
