--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Saniel Nascimento Cards Templates</title>
     <meta property="og:title" content="Saniel Nascimento Templates" >
     <meta property="og:type" content="website" >
-    <meta property="og:url" content="saniel-templates.vercel.app" >
+    <meta property="og:url" content="sanielnascimento.vercel.app" >
     <meta property="og:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.">
     <meta property="og:determiner" content="the" >
     <meta property="og:locale" content="pt_BR" >
@@ -13,7 +13,7 @@
     <meta property="og:locale:alternate -" content="es_ES" >
     <meta property="og:site_name" content="Site de templates do Saniel" >
 
-    <meta property="og:image" content="https://saniel-templates.vercel.app/img/saniel-card-meta.png">
+    <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png">
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:type" content="image/svg" />
     <meta property="og:image:type" content="image/jpeg" />
@@ -21,13 +21,13 @@
     <meta property="og:image:height" content="290" />
     <meta property="og:image:alt" content="Um cara muito bonito aparece em um cartão de visitas">
 
-    <meta property="fb:pages" content="https://saniel-templates.vercel.app/">
+    <meta property="fb:pages" content="https://sanielnascimento.vercel.app/">
 
-    <meta property="twitter:image" content="https://saniel-templates.vercel.app/img/saniel-card-meta.png">
+    <meta property="twitter:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png">
     <meta property="twitter:card" content="summary" >
-    <meta property="twitter:title" content="Saniel Templates">
+    <meta property="twitter:title" content="Saniel Nascimento Templates">
     <meta property="twitter:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.">
-    <meta property="description" content="Search engine description By Og" />
+    <meta property="description" content="Search engine description By Og">
     <meta name="description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."/>
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
