--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:site_name" content="Site de templates do Saniel" >
 
     <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png">
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:type" content="image/svg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="640" />
-    <meta property="og:image:height" content="360" />
+    <meta property="og:image:type" content="image/png" >
+    <meta property="og:image:type" content="image/svg" >
+    <meta property="og:image:type" content="image/jpeg" >
+    <!-- <meta property="og:image:width" content="640" >
+    <meta property="og:image:height" content="360" > -->
     <meta property="og:image:alt" content="Um cara muito bonito aparece em um cartão de visitas">
 
     <meta property="fb:pages" content="https://sanielnascimento.vercel.app/">
