--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
   </head>
   <body>
     <div id="root">
