alterando o tamanho da imagem og

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Saniel Nascimento Cards Templates</title>
-    <meta property="og:title" content="Saniel Nascimento Templates" >
-    <meta property="og:type" content="website" >
-    <meta property="og:url" content="sanielnascimento.vercel.app" >
-    <meta property="og:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.">
-    <meta property="og:determiner" content="the" >
-    <meta property="og:locale" content="pt_BR" >
-    <meta property="og:locale:alternate -" content="en_US" >
-    <meta property="og:locale:alternate -" content="es_ES" >
-    <meta property="og:site_name" content="Site de templates do Saniel" >
+    <meta property="og:title" content="Saniel Nascimento Templates" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="sanielnascimento.vercel.app" />
+    <meta property="og:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."/>
+    <meta property="og:determiner" content="the" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:locale:alternate -" content="en_US" />
+    <meta property="og:locale:alternate -" content="es_ES" />
+    <meta property="og:site_name" content="Site de templates do Saniel" />
 
     <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png"/>
     <meta property="og:image:type" content="image/png" />
