alterando o tamanho da imagem og

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
     <meta property="og:image:height" content="360" />
     <meta property="og:image:alt" content="Um cara muito bonito aparece em um cartão de visitas"/>
 
-    <meta property="twitter:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png">
-    <meta property="twitter:card" content="summary" >
-    <meta property="twitter:title" content="Saniel Nascimento Templates">
-    <meta property="twitter:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.">
-    <meta property="description" content="Search engine description By Og">
-    <meta name="description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."/>
     
+    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
   </head>
   <body>
     <div id="root">
     </div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <meta property="twitter:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png"> -->
+    <!-- <meta property="twitter:card" content="summary" > -->
+    <!-- <meta property="twitter:title" content="Saniel Nascimento Templates"> -->
+    <!-- <meta property="twitter:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."> -->
+    <!-- <meta property="description" content="Search engine description By Og"> -->
+    <!-- <meta name="description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias."/> -->
   </body>
 </html>
