--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <title>Saniel Nascimento TagTitle</title>  
     <meta property="og:locale" content="pt_BR" />
+    <meta property="og:title" content="Título da página" />
+    <meta property="og:description" content="Descrição da página" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sanielnascimento.vercel.app" />
-    <meta property="og:site_name" content="Saniel Desenvolvimentos Web" />
 
-    <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-meta.png" />
+    <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-whatsapp-634x340.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="315" />
+    <meta property="og:image:width" content="634" />
+    <meta property="og:image:height" content="340" />
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
