--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Saniel Nascimento TagTitle</title>  
+    <title>Saniel Nascimento Desenvolvimentos Web</title>  
     <meta property="og:locale" content="pt_BR" />
-    <meta property="og:title" content="Título da página" />
-    <meta property="og:description" content="Descrição da página" />
+    <meta property="og:title" content="Saniel Desenvolvimentos Web" />
+    <meta property="og:description" content="Já pensou em expandir seu negócio para a web? Criar sua landing page, portifólio ou mesmo loja online? Segue o link!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sanielnascimento.vercel.app" />
 
     <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-whatsapp-634x340.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="634" />
-    <meta property="og:image:height" content="340" />
+    <meta property="og:image:width" content="720" />
+    <meta property="og:image:height" content="480" />
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
