Incluindo configurações og do twitter

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <meta property="og:description" content="Já pensou em expandir seu negócio para a web? Criar sua landing page, portifólio ou mesmo loja online? Segue o link!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sanielnascimento.vercel.app" />
+    <meta property="description" content="Já pensou em expandir seu negócio para a web? Criar sua landing page, portifólio ou mesmo loja online? Segue o link!" />
 
     <meta property="og:image" content="https://sanielnascimento.vercel.app/img/saniel-card-whatsapp-634x340.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="720" />
     <meta property="og:image:height" content="480" />
+
+    <meta property="twitter:image" content="https://sanielnascimento.vercel.app/img/saniel-card-whatsapp-634x340.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Saniel Desenvolvimentos Web">
+    <meta property="twitter:description" content="Desenvolvedor Full Stack com habilidades técnicas em HTML5, CSS3, JavaScript (ES6), TypeScript, React, Express.js, Node.js, TypeORM, Python,  Django, PostgreSQL, SQLite. Onde desenvolvi cerca de 50 projetos abrangendo todas essas tecnologias.">
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
